# Transformers_from_scratch

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml  setup.py
notebooks/: GPT_from_scratch.ipynb
pytorch_transformers/: README.md  __init__.py  test_gpt.py
pytorch_transformers/configs/: gpt_config.py
pytorch_transformers/data/: data_utils.py
pytorch_transformers/docs/: architecture.md
pytorch_transformers/experiments/: experiment_log.md
pytorch_transformers/losses/: gpt_loss.py
pytorch_transformers/models/: gpt.py
pytorch_transformers/notebooks/: gpt_exploration.ipynb
pytorch_transformers/scripts/: evaluate.py  tokenize.py  train.py
pytorch_transformers/tests/: test_gpt.py
pytorch_transformers/training/: train.py
pytorch_transformers/utils/: training_utils.py
